--- a/code/styles.css
+++ b/code/styles.css
@@ -1,3 +1,15 @@
+
+
+h1 {
+  color: rgb(248, 186, 210);
+  background-color: rgb(116, 86, 73);
+}
+
 h3 {
     margin-bottom: 0px;
   }
+
+#content {
+background-color: rgb(243, 227, 220);
+}
+
