--- a/code/styles.css
+++ b/code/styles.css
@@ -1,8 +1,14 @@
 
+body{
+  background-color:hsl(25, 20%, 22%);
+  color:hsl(25, 20%, 22%);
+  font: normal 15px "helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  }
 
 h1 {
-  color: rgb(248, 186, 210);
-  background-color: rgb(116, 86, 73);
+  color:rgb(255, 133, 188);
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 h3 {
@@ -10,6 +16,19 @@ h3 {
   }
 
 #content {
-background-color: rgb(243, 227, 220);
+background-color: rgb(238, 215, 222);
+border-style: solid;
+border-color: rgb(255, 133, 188);
+padding-left: 20px;
 }
 
+.knap {
+  font: normal 15px "helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  border-color: hsl(25, 20%, 22%);
+  color: hsl(25, 20%, 22%);
+  background-color: #e8e5da;
+}
+.knap:hover {
+  background-color: rgb(255, 133, 188);
+  color: hsl(25, 20%, 22%);
+}
